--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- TOP BANNER IMAGE -->
   <div class="hero-banner">
     <!-- change the src to your actual banner file -->
-    <img src="images/river.jpg"
+    <img src="images/3.jpg"
          alt="Homestay Rantau Kemiding Kanowit – river and longhouse view">
   </div>
   <!-- HERO / FRONT PAGE -->
@@ -384,4 +384,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
