--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- TOP BANNER IMAGE -->
   <div class="hero-banner">
     <!-- change the src to your actual banner file -->
-    <img src="images/3.jpg"
+    <img src="images/scene2.jpg"
          alt="Homestay Rantau Kemiding Kanowit – river and longhouse view">
   </div>
   <!-- HERO / FRONT PAGE -->
@@ -79,51 +79,61 @@
         </a>
       </div>
     </div>
+<div class="hero-card animate delay-3">
+  <div class="hero-card-inner">
+    <h3>Stay • Nature • River</h3>
+    <p class="small">
+      Simple pricing for an unforgettable experience surrounded by lush greenery, river life, and Iban culture.
+    </p>
 
-    <div class="hero-card animate delay-3">
-      <div class="hero-card-inner">
-        <h3>Stay • Nature • River</h3>
-        <p class="small">
-          Simple pricing for an unforgettable experience surrounded by lush greenery, river life, and Iban culture.
-        </p>
-
-        <div class="price-grid">
-          <div class="price-row">
-            <div class="price-label">
-              <span>🏡 Accommodation</span>
-              <span>Comfortable longhouse-style stay • Meals not included</span>
-            </div>
-            <div class="price-tag">RM60<span>/night (1 pax)</span></div>
+    <div class="price-grid">
+      <div class="price-row">
+        <div class="price-label">
+          <span>🏡 Accommodation</span>
+          <span>Comfortable longhouse-style stay • Meals not included</span>
+        </div>
+        <div class="price-options">
+          <div class="price-tag">
+            RM60<span>/night (1 pax, no aircond)</span>
           </div>
-          <div class="price-row">
-            <div class="price-label">
-              <span>⛺ Camping by the River</span>
-              <span>Weekend only • Sleep under the stars • Meals not included</span>
-            </div>
-            <div class="price-tag">RM50<span>/pax</span></div>
-          </div>
-          <div class="price-row">
-            <div class="price-label">
-              <span>🚤 UpRiver Cruising</span>
-              <span>Local boat • Max 5 passengers (incl. skipper)</span>
-            </div>
-            <div class="price-tag">RM250<span>/hour</span></div>
-          </div>
-          <div class="price-row">
-            <div class="price-label">
-              <span>🛶 Kayaking Adventure</span>
-              <span>Calm waters • Scenic river surroundings</span>
-            </div>
-            <div class="price-tag">RM10<span>/hour (per pax)</span></div>
+          <div class="price-tag">
+            RM80<span>/night (1 pax, with aircond)</span>
           </div>
         </div>
+      </div>
 
-        <p class="hero-note">
-          ⓘ UpRiver cruising price may vary depending on distance covered.  
-          Camping available on weekends only. Meals are not included unless stated in package.
-        </p>
+      <div class="price-row">
+        <div class="price-label">
+          <span>⛺ Camping by the River</span>
+          <span>Weekend only • Sleep under the stars • Meals not included</span>
+        </div>
+        <div class="price-tag">RM50<span>/pax</span></div>
+      </div>
+
+      <div class="price-row">
+        <div class="price-label">
+          <span>🚤 UpRiver Cruising</span>
+          <span>Local boat • Max 5 passengers (incl. skipper)</span>
+        </div>
+        <div class="price-tag">RM250<span>/hour</span></div>
+      </div>
+
+      <div class="price-row">
+        <div class="price-label">
+          <span>🛶 Kayaking Adventure</span>
+          <span>Calm waters • Scenic river surroundings</span>
+        </div>
+        <div class="price-tag">RM10<span>/hour (per pax)</span></div>
       </div>
     </div>
+
+    <p class="hero-note">
+      ⓘ UpRiver cruising price may vary depending on distance covered.  
+      Camping available on weekends only. Meals are not included unless stated in package.
+    </p>
+  </div>
+</div>
+
   </section>
 
   <!-- GALLERY (SLIDESHOW) -->
@@ -184,9 +194,10 @@
               <span>🌄</span><span>2 Days / 1 Night Package</span>
             </div>
             <h3>2D1N Homestay Experience</h3>
-            <div class="price">RM150 per pax per night</div>
+            <div class="price">RM190 per pax per night</div>
             <div class="meta">
-              Includes accommodation, meals & cultural activities
+              Includes accommodation, meals & cultural activities<br>
+              Notes: Check-in after 12:00PM, Check out 11:30AM
             </div>
             <ul>
               <li><strong>Day 1</strong> – Welcoming drinks, cultural dance performance, accommodation, meals & beverages, longhouse tour & story-sharing session</li>
@@ -384,5 +395,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
