--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <li>Homestay Operators Course 2009/2010</li>
         <li>House/Room/Facilities inspection by MOT/MOTAC and relevant government agencies 2010</li>
         <li>Homestay approval by MOT/MOTAC 08 February 2011</li>
-        <li>2017 – Seven new homestay operators approved (Total operators to date: 21)</li>
+        <li>Total operators to date 2025: 13</li>
         <li>KOPERASI HOMESTAY RH BENJAMIN ANGKI registered 4.12.2012 by SKM</li>
         <li>Up to October 2018: 76 members, out of which 31 are heads of households</li>
       </ul>
@@ -395,3 +395,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
